--- a/gravityPrototype/gravityPrototype.csproj
+++ b/gravityPrototype/gravityPrototype.csproj
@@ -75,5 +75,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="models\CubeModels\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
