add main interfaces

--- a/gravityPrototype/gravityPrototype.csproj
+++ b/gravityPrototype/gravityPrototype.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="models\Cubes\ICube.cs" />
+    <Compile Include="models\Fields\IField.cs" />
+    <Compile Include="models\StructureCheckers\IStructureChecker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -75,8 +78,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="models\CubeModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
