started work on server\client classes

--- a/gravityPrototype/gravityPrototype.csproj
+++ b/gravityPrototype/gravityPrototype.csproj
@@ -53,6 +53,8 @@
     </Compile>
     <Compile Include="models\Actions\IAction.cs" />
     <Compile Include="models\Actions\IActionWithCube.cs" />
+    <Compile Include="models\Client-Server\CClient.cs" />
+    <Compile Include="models\Client-Server\CServer.cs" />
     <Compile Include="models\Cubes\ActiveCubes\IActiveCube.cs" />
     <Compile Include="models\Cubes\ICube.cs" />
     <Compile Include="models\Cubes\NonActiveCubes\IBorderCube.cs" />
